fixed header glitches on overflow hidden
- fixed header glitches on overflow hidden when modal is active

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,6 +5,7 @@ header {
 	left: 0;
 	width: 100%;
 	background-color: #000000;
+	box-sizing: border-box;
 }
 
 .header--container {
